kubernetes/apps/karakeep/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  labels:
    app: meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      enableServiceLinks: true
      containers:
      - name: meilisearch
        image: getmeili/meilisearch:v1.13.3
        # securityContext:
        #   runAsNonRoot: false
        #   # runAsUser: 1000
        #   readOnlyRootFilesystem: false
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 1Gi
        ports:
          - containerPort: 7700
            name: http
        volumeMounts:
          - name: meilisearch-data
            mountPath: /meili_data
      volumes:
      - name: meilisearch-data
        persistentVolumeClaim:
          claimName: meilisearch-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep
  labels:
    app: karakeep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep
  template:
    metadata:
      labels:
        app: karakeep
    spec:
      enableServiceLinks: true
      containers:
      - name: karakeep
        image: ghcr.io/karakeep-app/karakeep:latest
        # securityContext:
        #   runAsNonRoot: false
        #   # runAsUser: 1000
        #   readOnlyRootFilesystem: false
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 1536Mi
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: karakeep-data
          mountPath: /data
      volumes:
      - name: karakeep-data
        persistentVolumeClaim:
          claimName: karakeep-data
