kubernetes/apps/karakeep/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  selector:
    app: meilisearch
  ports:
    - name: meili
      port: 7700
      targetPort: 7700
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep
spec:
  selector:
    app: karakeep
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
